# Hackathon

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MMIX_DATA_ANALYSIS_REPORT.md  README.md  app.py  check_narratives.py  demo_scenarios.py  instructions.md  main.py  pyproject.toml  requirements.txt  test_agentic_verbose.py  test_azure_key.py
agents/: __init__.py  llm.py  orchestrator.py
docs/: ADVANCED_MODELING_GUIDE.md  ADVANCED_MODELING_PROOF.md  ARCHITECTURE.md  COMPLETION_SUMMARY.py  IMPLEMENTATION_SUMMARY.md  LLD_Part1_System_Overview.md  LLD_Part2_Module_Detail.md  LLD_Part3_Feature_Model.md  LLD_Part4_Agentic_Framework.md  QUICK_START.md  architecture_diagram.html  architecture_diagram.mermaid  project_structure.md
domain/: problem.txt
engine/: __init__.py  column_classification.py  eda_metrics.py  goal_parsing.py  modeling.py  optimization_engine.py  response_curves.py  validation.py
engine/export/: __init__.py  excel.py  powerpoint.py
notebooks/: eda-notebook.ipynb  mmix_advanced_analysis.ipynb
outputs/reports/: agent_reasoning_trace.txt  mmix_narrative_report.md
outtest/: pipeline_state.json
src/: __init__.py  agent_orchestrator.py  config.py  data_aggregation.py  eda_pipeline.py  feature_engineering.py  llm_config.py  modeling_engine.py  narrative_generator.py  outlier_detection.py  response_curves.py
src/mmix/: __init__.py  config.py
src/mmix/agents/: __init__.py  orchestrator.py
src/mmix/engine/: __init__.py  utilities.py  validation.py
src/mmix/export/: __init__.py  excel.py  goals.py  optimizer.py  powerpoint.py
src/mmix/legacy/: __init__.py  feature_engineering.py  outlier_detection.py
src/mmix/legacy/notebooks/old notebooks/: feature_engineering.py
src/mmix/modeling/: __init__.py  advanced_modeling.py
src/mmix/pipeline/: __init__.py  column_classifier.py  eda.py  models.py  response_curves.py
src/mmix/visualization/: __init__.py  plots.py
src/old notebooks/: eda-pipeline.py
tests/: __init__.py  test_agents.py  test_export.py  test_pipeline.py  test_pipeline_validation.py
workflows/: 01_data_loading.md  02_eda.md  03_outlier_removal.md  04_feature_engineering.md  05_modeling.md  06_response_curves.md  07_optimization.md  data_flow.md
